--- a/hosts.ini
+++ b/hosts.ini
@@ -2,40 +2,82 @@
 docker_containers=['svip_nginx', 'svip_api', 'svip_db', 'svip_redis']
 force_compose=false
 
-[local]
-localhost 
 
-[local:vars]
-ansible_connection=local 
-ansible_python_interpreter=/usr/local/bin/python3
-svip_path=/tmp/ansible
-docker_containers=['sshd']
+### SVIP ###
+; [svip_local]
+; localhost
+
+; [svip_local:vars]
+; ansible_connection=local 
+; ansible_python_interpreter=/usr/local/bin/python3
+; dest=/tmp/ansible
+; docker_containers=['sshd']
 
 [dev]
 svip_d
 
 [dev:vars]
-svip_path=/data/svip_staging/coordinator
+dest=/data/svip_staging/coordinator
 branch=development
 
 [test]
 svip_t
 
 [test:vars]
-svip_path=/data/svip_staging/svip
+dest=/data/svip_staging/svip
 branch=test
 
 [prod]
 svip_p
 
 [prod:vars]
-svip_path=/data/svip_deployment/svip
+dest=/data/svip_deployment/svip
 
 [prod_sib]
 # needs: surtun svip_sib 18183 2222
 svip_sib
 
 [prod_sib:vars]
-svip_path=/home/local/svip/checkouts/svip
+dest=/home/local/svip/checkouts/svip
 docker_containers=[]
 site_compose=sib-svip
+
+[prod_sec]
+# dtrun sshd
+# dtrun proxy
+# needs: surtun svip_sec 18183 2222 (ssh)
+# needs: surtun svip_sec 8888 8888 (https)
+# export http_proxy=http://localhost:8888
+# export https_proxy=https://localhost:8888
+# ./tcptunnel --bind-address=0.0.0.0 --local-port=18184 --remote-host=localhost --remote-port 8888 --fork --stay-alive -> this is in the tcptunnel docker container
+#
+# Check rtun connections: ps -ef | grep ssh | grep "^svip" | grep -v "pts"
+svip_sec
+
+[prod_sec:vars]
+dest=/home/local/svip/checkouts/svip
+docker_containers=[]
+site_compose=sib-svip-private
+branch=sib_private_instance_adjustments
+
+
+### ICARuS ###
+[icarus_local]
+localhost
+
+[icarus_local:vars]
+ansible_connection=local 
+ansible_python_interpreter=/usr/local/bin/python3
+repo=https://github.com/ETH-NEXUS/imoma_icarus_2020_ui.git
+dest=/tmp/icarus
+branch=master 
+docker_containers=['icarus_db_1', 'icarus_ui_1', 'icarus_be_1']
+
+[icarus]
+imomaui
+
+[icarus:vars]
+repo=https://github.com/ETH-NEXUS/imoma_icarus_2020_ui.git
+dest=/opt/icarus
+branch=master 
+docker_containers=['icarus_db_1', 'icarus_ui_1', 'icarus_be_1']
